tests/invalid/lifetime/hrt_fn_variance_arg.facet
fn accept_affine(x: affine isize) -> unrestricted () {
    ()
}

fn main() -> unrestricted () {
    let f: unrestricted fn(linear isize) -> unrestricted () = accept_affine in
    ()
}
